Arreglo el gh-pages

--- a/index.html
+++ b/index.html
@@ -76,8 +76,9 @@
     </section>
 
     <!-- This comment is exclusively designed to create a merge conflict
-         DEVLABS__UCV/UCAB
-         VERSION 2.002
+
+         DEVLABS--USB
+         VERSION 1.01
       -->
 
     <section id="questions">
@@ -90,9 +91,9 @@
           conflict causado por el paso 4.
         </h3>
         <div class="answer">
-          Colocar acá el hash. Nota: El hash sería algo como: 8a000d3d2ec8b5f8b2286ad279c54b430fc97c67<br />
+          Colocar acá el hash. Nota: El hash sería algo como: 6a7d638884834dd5b835a165c65f0bc595960659<br />
           o mejor aún, podrían apuntarlo directamente a github:
-          <a href="https://github.com/devlabs-usb/tarea1-git/commit/8a000d3d2ec8b5f8b2286ad279c54b430fc97c67" target="blank">8a000d3d2ec8b5f8b2286ad279c54b430fc97c67</a>
+          <a href="https://github.com/devlabs-usb/tarea1-git/commit/6a7d638884834dd5b835a165c65f0bc595960659" target="blank">6a7d638884834dd5b835a165c65f0bc595960659</a>
         </div>
       </article>
       <article id="q2">
