--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <a id="github-ribbon" href="https://github.com/devlabs-usb/tarea1-git"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_white_ffffff.png" alt="Fork me on GitHub"></a>
 
     <header>
-      <h1>DevLabs__UCB/UCAB</h1>
+      <h1>DevLabs__USB</h1>
       <h2>Tarea 1</h2>
     </header>
 
