--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   </head>
 
   <body>
-    <a id="forkme_banner" href="https://github.com/leofaster/branch">View on GitHub</a>
+    <a id="forkme_banner" href="https://github.com/leofaster/tarea1-git">View on GitHub</a>
     <div class="shell">
 
       <header>
@@ -40,7 +40,7 @@
 
       <section id="downloads">
         <span class="inner">
-          <a href="https://github.com/leofaster/branch/zipball/master" class="zip"><em>download</em> .ZIP</a><a href="https://github.com/leofaster/branch/tarball/master" class="tgz"><em>download</em> .TGZ</a>
+          <a href="https://github.com/leofaster/tarea1-git/zipball/master" class="zip"><em>Descarga</em> .ZIP</a><a href="https://github.com/leofaster/tarea1-git/tarball/master" class="tgz"><em>Descarga</em> .TGZ</a>
         </span>
       </section>
 
